# octogoat-plugin

./: .editorconfig  .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  PRIVACY.md  README.md  TERMS.md  Taskfile.yml  babel.cfg  lazarus_web.pi  lazarus_web.py  pyproject.toml  requirements.txt  setup.py
extras/: community_forum_announcement.md  discovery_checklist.md  github_release_v0.1.1.md  lazarus.md  octoprint_registry_pr_body.md  octoprint_resubmission_comment.md
octoprint_lazarus/: __init__.py  resume_engine.py
octoprint_lazarus/static/css/: lazarus.css
octoprint_lazarus/static/js/: lazarus.js
octoprint_lazarus/templates/: lazarus_settings.jinja2  lazarus_tab.jinja2
octoprint_octogoat/: __init__.py  octogoat_plugin.py  resume_engine.py  setup.py
octoprint_octogoat/octoprint_octogoat/: octogoat_plugin.py
octoprint_octogoat/static/css/: octogoat.css
octoprint_octogoat/static/js/: octogoat.js
octoprint_octogoat/templates/: octogoat_generic.jinja2  octogoat_settings.jinja2  octogoat_tab.jinja2
tests/: test_resume_engine.py
